fix filter overflow

--- a/sass/common.sass
+++ b/sass/common.sass
@@ -2279,6 +2279,10 @@ form .field
 						display: block
 						line-height: 22px
 						cursor: pointer
+		&.multifilters-category
+			.nav-menu
+				overflow-y: visible
+				max-height: none
 	li
 		position: relative
 		.nav-input
